<?xml version="1.0"?>
<package format="2">
  <name>msc_HARE</name>
  <version>0.0.0</version>
  
  <description>The msc_HARE package</description>
  
  <maintainer email="kaichen.liu@berkeley.edu">Kaichen Liu</maintainer>
  
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <export>

  </export>
</package>
